export enum EnrollmentStatus {
  PENDING_GROUP = 'PENDING_GROUP',
  CONFIRMED = 'CONFIRMED',
  LEARNING = 'LEARNING',
  UNPAID = 'UNPAID',
  CANCELLED = 'CANCELLED',
  DONE = 'DONE',
}
